2006-06-17  Bruno Haible  <bruno@clisp.org>

	* iconvstring.c (iconv_string): Recognize conversion failures also
	from NetBSD's iconv().

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* config.charset: Update for NetBSD 3.0.

2006-06-17  Bruno Haible  <bruno@clisp.org>

	* xgetcwd.c: Assume errno.h declares errno.
	* xreadlink.c: Likewise.

2006-06-16  Eric Blake  <ebb9@byu.net>

	* unsetenv.c [!defined errno]: Assume errno.h declares errno.
	* strtol.c [!defined errno]: Likewise.

2006-06-04  Bruno Haible  <bruno@clisp.org>

	* gettext.h (_LIBGETTEXT_HAVE_VARIABLE_SIZE_ARRAYS): Parenthesize.
	Include stdlib.h.

2006-05-17  Bruno Haible  <bruno@clisp.org>

	Cygwin portability.
	* classpath.c (PATH_SEPARATOR) [CYGWIN]: Define as ':'.
	* javaexec.c (execute_java_class): Test for jview program also on
	Cygwin.
	* localcharset.c (WIN32_NATIVE): Renamed from WIN32.
	* progreloc.c (WIN32_NATIVE): Renamed from WIN32.

2006-05-16  Bruno Haible  <bruno@clisp.org>

	* localcharset.c [CYGWIN]: Include <windows.h>.
	(get_charset_aliases): For Cygwin, return the same CPxxx aliases list
	as under WIN32.
	(locale_charset) [CYGWIN]: Try to retrieve the encoding from the
	environment variables. Fall back to GetACP().

2006-05-16  Bruno Haible  <bruno@clisp.org>

	* javacomp.c (is_envjavac_gcj_14_14_usable,
	is_envjavac_gcj_14_13_usable, is_envjavac_nongcj_usable,
	is_gcj_present, is_gcj_14_14_usable, is_gcj_14_13_usable,
	is_javac_usable): Remove unused variable.

2006-05-15  Bruno Haible  <bruno@clisp.org>

	* Makefile.am: Test flag WOE32DLL instead of CYGWINDLL.

2006-04-30  Bruno Haible  <bruno@clisp.org>

	* progreloc.c: Include <mach-o/dyld.h> if available.
	(find_executable): Use _NSGetExecutablePath when possible.

2006-05-12  Bruno Haible  <bruno@clisp.org>

	* mkdtemp.c [MINGW]: Include <io.h>.
	(mkdir): Define using _mkdir.

2006-05-11  Bruno Haible  <bruno@clisp.org>

	* Makefile.am (libgettextlib_la_SOURCES, libgettextlib_la_LDFLAGS):
	Modify for Cygwin.
